--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
   </head>
   <body>
     <script src="src/index.js"></script>
+    <footer>
+      This AI project was coded by
+      <a href="https://github.com/Kbforsure">KB</a>, is open-sourced on
+      <a href="https://github.com/Kbforsure/poem-generator">GitHub</a> and
+      hosted on <a href="https://poemgeneratorkb.netlify.app/">Netlify</a>
+    </footer>
   </body>
 </html>
