adding blank targets

--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
     <script src="src/index.js"></script>
     <footer>
       This AI project was coded by
-      <a href="https://github.com/Kbforsure">KB</a>, is open-sourced on
-      <a href="https://github.com/Kbforsure/poem-generator">GitHub</a> and
-      hosted on <a href="https://poemgeneratorkb.netlify.app/">Netlify</a>
+      <a href="https://github.com/Kbforsure" target="_blank">KB</a>, is
+      open-sourced on
+      <a href="https://github.com/Kbforsure/poem-generator" target="_blank"
+        >GitHub</a
+      >
+      and hosted on
+      <a href="https://poemgeneratorkb.netlify.app/" target="_blank">Netlify</a>
     </footer>
   </body>
 </html>
