adding HTML elements

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   </head>
   <body>
     <script src="src/index.js"></script>
+    <header>
+      <h1>AI Poem Generator</h1>
+    </header>
+    <main>
+      <form>
+        <input type="text" placeholder="Enter your poem topic here!" />
+      </form>
+    </main>
     <footer>
       This AI project was coded by
       <a href="https://github.com/Kbforsure" target="_blank">KB</a>, is
