--- a/index.html
+++ b/index.html
@@ -13,8 +13,19 @@
     </header>
     <main>
       <form>
-        <input type="text" placeholder="Enter your poem topic here!" />
+        <input
+          type="text"
+          placeholder="Enter your poem topic here!"
+          autofocus
+          required
+        />
+        <input type="submit" />
       </form>
+      <div>
+        The poem will go here
+        <br />
+        The poem will go here
+      </div>
     </main>
     <footer>
       This AI project was coded by
