--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           placeholder="Enter your poem topic here!"
           autofocus
           required
+          autocomplete="off"
         />
         <input type="submit" />
       </form>
