--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
-    <link rel="stlesheet" href="src/style.css" />
+    <link rel="stylesheet" href="src/style.css" />
     <title>Poem Generator</title>
   </head>
+  <div class="container">
   <body>
     <script src="src/index.js"></script>
     <header>
@@ -38,5 +39,6 @@
       and hosted on
       <a href="https://poemgeneratorkb.netlify.app/" target="_blank">Netlify</a>
     </footer>
+    </div>
   </body>
 </html>
