--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         />
         <input type="submit" />
       </form>
-      <div>
+      <div class="poem">
         The poem will go here
         <br />
         The poem will go here
@@ -39,6 +39,6 @@
       and hosted on
       <a href="https://poemgeneratorkb.netlify.app/" target="_blank">Netlify</a>
     </footer>
-    </div>
+</div>
   </body>
 </html>
