--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
           autofocus
           required
           autocomplete="off"
+          class="instructions"
         />
-        <input type="submit" />
+        <input type="submit" class="button"/>
       </form>
       <div class="poem">
         The poem will go here
