--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1>AI Poem Generator</h1>
     </header>
     <main>
-      <form>
+      <form id="poem-generator-form">
         <input
           type="text"
           placeholder="Enter your poem topic here!"
